--- a/Schedule_App.API/appsettings.json
+++ b/Schedule_App.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Local": "Host=localhost;Database=schedule_app_db;Username=postgres;Password=local;"
+  }
 }
